# serde_rustler

./: README.md  mix.exs
serde_rustler/: Cargo.toml  README.md
serde_rustler/src/: atoms.rs  de.rs  lib.rs  ser.rs
serde_rustler_tests/: mix.exs
serde_rustler_tests/native/serde_rustler_tests/: Cargo.toml
serde_rustler_tests/native/serde_rustler_tests/src/: json.rs  lib.rs  test.rs
