[package]
name        = "serde_rustler"
description = "Serde Serializer and Deserializer for Rustler NIFs"
version     = "0.1.0"
authors     = ["George Miao <gm@miao.dev>"]
repository  = "https://github.com/George-Miao/serde_rustler"
categories  = ["encoding", "external-ffi-bindings", "serde", "rustler", "elixir"]
readme      = "README.md"
license     = "MIT"
edition     = "2021"

# [lib]
# name       = "serde_rustler"
# path       = "src/lib.rs"
# crate-type = ["rlib"]

[dependencies]
quick-error     = "1.2"
rustler         = "0.27.0"
rustler_codegen = "0.27.0"
serde           = "1.0"
